# blog

./: .env  Gemfile  _config.yml  _posts  robots.txt
.github/workflows/: pages-deploy.yml
_code_for_posts/bounding-boxes-ellipsoids/: main.py  pyproject.toml
_obsidian/: post ideas.md
_obsidian/.obsidian/: types.json  workspace.json
_obsidian/.obsidian/plugins/templater-obsidian/: data.json
_obsidian/_posts/: 2025-05-24-my-blog.md  2025-05-27-bounding-boxes-bounding-ellipsoids.md
_obsidian/_unfinished_posts/: 2025-05-14-bounding-boxes-bounding-ellipsoids.md  2025-06-12-multiplicative-extended-kalman-filter-mekf.md
_obsidian/templates/: jekyll-post.md
_tabs/: about.md
src/site/notes/Alloys/Blog/: Bounding Boxes & Bounding Ellipsoids.md  Home.md
src/site/notes/Alloys/Blog/Posts/: Bounding Boxes & Bounding Ellipsoids.md  My Blog.md
